<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MBackup</string>
    <string name="action_keep">Keep</string>
    <string name="action_import_export_contact">Export Contact</string>
    <string name="action_import_export_sms">Export SMS</string>
    <string name="action_about_phone_info">Phone Info</string>
    <string name="action_about_package_info">Package Info</string>
    <string name="action_sdfile">File</string>
    <string name="action_settings">Settings</string>
    <string name="about_setting">About</string>
    <string name="theme_setting">Theme</string>
    <string name="about_version_title">Version</string>
    <string name="about_copyright_title">Copyright</string>
    <string name="about_version_text">V0.4.1 (AT040100) Build Default</string>
    <!-- 
    <string name="about_version_text">V0.4.1 (AT040100) Build Meizu</string>
     -->
     
    <string name="empty_folder">empty folder</string>
    <string name="confirm">Confirm</string>
    <string name="export">Export</string>
    <string name="cancel">Cancel</string>
    <string name="contacts">Contacts</string>
    <string name="sms">SMS</string>
    <string name="sms_info">Export contacts ?</string>
    <string name="contacts_info">Export SMS ?</string>
    <string name="exporting">Exporting...</string>
    <string name="export_info">File saved at：</string>
    
    <string name="about_copyright_text">©2014 LJRFOX.STUDIO</string>
    <string name="no_network">Network not available</string>
    <string name="itemdeleted">Item deleted</string>
    <string name="taptoundo">Tap to undo</string>

</resources>