<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/about_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal" >
        <TextView 
            android:id="@+id/about_version_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_version_title" />
        <TextView 
            android:id="@+id/about_version_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/about_version_text"
            android:textColor="#999999" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/about_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal" >
        <TextView 
            android:id="@+id/about_copyright_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_copyright_title" />
        <TextView 
            android:id="@+id/about_copyright_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/about_copyright_text"
            android:textColor="#999999" />
    </LinearLayout>

</LinearLayout>
